--- a/templates/about.html
+++ b/templates/about.html
@@ -78,7 +78,7 @@
                 <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center">About
-                        <strong>surya care</strong>
+                        <strong>madrasweb</strong>
                     </h2>
                     <hr>
                 </div>
