New content added to about and newbase.html

--- a/templates/about.html
+++ b/templates/about.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>About - MadrasWeb - Start Bootstrap Theme</title>
+    <title>About - MadrasWeb - the website</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
@@ -33,7 +33,7 @@
 <body>
 
     <div class="brand">MadrasWeb</div>
-    <div class="address-bar">Atlanta | Georgia | 720.285.7089</div>
+    <div class="address-bar">Chennai | TamilNadu | India</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -87,6 +87,7 @@
                 </div>
                 <div class="col-md-6">
                     <p>MadrasWeb.com was registered on Sep 15, 2015.</p>
+                    <p>The site reason for existence is to document the glory of the city named Madras. To show people the true city behind all the grime, poverty and pollution.
                 </div>
                 <div class="clearfix"></div>
             </div>
