--- a/templates/newbase.html
+++ b/templates/newbase.html
@@ -35,7 +35,7 @@
 <body>
 
     <div class="brand">MadrasWeb</div>
-    <div class="address-bar">Atlanta | Georgia | 720.285.7089</div>
+    <div class="address-bar">Chennai | TamilNadu | India</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -127,15 +127,14 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Build a website
-                        <strong>worth visiting</strong>
+                    <h2 class="intro-text text-center">Madras,
+                        <strong>a city worth visiting.</strong>
                     </h2>
                     <hr>
                     <img class="img-responsive img-border img-left" src="{{ url_for('static', filename='img/intro-pic.jpg') }}" alt="">
                     <hr class="visible-xs">
-                    <p>The boxes used in this template are nested inbetween a normal Bootstrap row and the start of your column layout. The boxes will be full-width boxes, so if you want to make them smaller then you will need to customize.</p>
-                    <p>A huge thanks to <a href="http://join.deathtothestockphoto.com/" target="_blank">Death to the Stock Photo</a> for allowing us to use the beautiful photos that make this template really come to life. When using this template, make sure your photos are decent. Also make sure that the file size on your photos is kept to a minumum to keep load times to a minimum.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                    <p>Madras, the city of my childhood, the city of my youth, the city of my dreams, was the best city in the world.</p>
+                    <p>As someone who has enjoyed everything that Madras has to offer, I believe it is time to give back to the city. How does creating a webpage equal giving back to the city? I am not an architect. I cannot create a tower in my city's honor. I am not a poet. I cannot wax lyrical about my lovely city. I am limited in what I can do. So I decided to do what I know how to do. Use technology to showcase the greatness of this city.</p>
                 </div>
             </div>
         </div>
@@ -144,12 +143,15 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Beautiful boxes
-                        <strong>to showcase your content</strong>
+                    <h2 class="intro-text text-center">Madras
+                        <strong>the multifaceted, the multicultural.</strong>
                     </h2>
                     <hr>
-                    <p>Use as many boxes as you like, and put anything you want in them! They are great for just about anything, the sky's the limit!</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                    <p>South Madras is famous for its posh localities. North Madras makes sure that Madras remains Madras by remaining untouched by time.</p>
+                    <p>Madras is to the south, what Bombay was to a lot of people, what New York City was to the world arriving at its ports. A place where you went to make your living. A place that offered hope of a better life and more often than not, fulfilled your hopes and dreams. The city that took my grandfather in and gave him food and shelter, taught him his trade and saw him live his life surrounded by family and supported by the fruits of his hard work.</p>
+                    <p>The beaches - oh the ever present beaches. Madras's beaches are as long as the city itself, providing merriment and livelihood alike to those that crowd its sands.</p>
+                    <p>The temples - so many huge old temples that, it appears to the random observers that the city is built around these temples. </p>
+                    <p>The food - kothu porotta, mutta dosai, kal dosai, ulundhu vadai, paruppu vada! Enough said </p>
                 </div>
             </div>
         </div>
