--- a/templates/blog.html
+++ b/templates/blog.html
@@ -33,7 +33,7 @@
 <body>
 
     <div class="brand">MadrasWeb</div>
-    <div class="address-bar">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
+    <div class="address-bar">Madras | TamilNadu | India</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -77,38 +77,38 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Company
+                    <h2 class="intro-text text-center">Our
                         <strong>blog</strong>
                     </h2>
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
                     <img class="img-responsive img-border img-full" src="{{ url_for('static', filename='img/slide-1.jpg') }}" alt="">
-                    <h2>Post Title
+                    <h2>The early years, ante 1640AD
                         <br>
                         <small>October 13, 2013</small>
                     </h2>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    <p>All the way leading the establishment of the English at Madraspatanam </p>
                     <a href="#" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src="{{ url_for('static', filename='img/slide-2.jpg') }}" alt="">
-                    <h2>Post Title
+                    <img class="img-responsive img-border img-full" src="{{ url_for('static', filename='img/FortStGeorge-Chennai.jpg') }}" alt="">
+                    <h2>The early years of Fort St. George
                         <br>
-                        <small>October 13, 2013</small>
+                        <small>Sep 15, 2015</small>
                     </h2>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    <p>The foundation of Fort St. George, Gubernatorial political play </p>
                     <a href="#" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
                     <img class="img-responsive img-border img-full" src="{{ url_for('static', filename='img/slide-3.jpg') }}" alt="">
-                    <h2>Post Title
+                    <h2>King Charles and Madras
                         <br>
-                        <small>October 13, 2013</small>
+                        <small>Sep 15, 2015</small>
                     </h2>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    <p> In comes religion, the Black and White town, Immorality a la mode</p>
                     <a href="#" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
