--- a/templates/contact.html
+++ b/templates/contact.html
@@ -33,7 +33,7 @@
 <body>
 
     <div class="brand">MadrasWeb</div>
-    <div class="address-bar">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
+    <div class="address-bar">Madras | TamilNadu | India </div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -78,7 +78,7 @@
                 <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center">Contact
-                        <strong>business casual</strong>
+                        <strong>MadrasWeb</strong>
                     </h2>
                     <hr>
                 </div>
@@ -87,15 +87,12 @@
                     <iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=56.506174,79.013672&amp;t=m&amp;z=4&amp;output=embed"></iframe>
                 </div>
                 <div class="col-md-4">
-                    <p>Phone:
-                        <strong>123.456.7890</strong>
-                    </p>
                     <p>Email:
-                        <strong><a href="mailto:name@example.com">name@example.com</a></strong>
+                        <strong><a href="mailto:admin@madrasweb.com">admin@madrasweb.com</a></strong>
                     </p>
                     <p>Address:
-                        <strong>3481 Melrose Place
-                            <br>Beverly Hills, CA 90210</strong>
+                        <strong>Madras
+                            <br>TamilNadu, India </strong>
                     </p>
                 </div>
                 <div class="clearfix"></div>
@@ -110,7 +107,7 @@
                         <strong>form</strong>
                     </h2>
                     <hr>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, vitae, distinctio, possimus repudiandae cupiditate ipsum excepturi dicta neque eaque voluptates tempora veniam esse earum sapiente optio deleniti consequuntur eos voluptatem.</p>
+                    <p>Write to us with questions, concerns, suggestions, ideas for improvement/partnership etc etc. We're happy to hear from you.</p>
                     <form role="form">
                         <div class="row">
                             <div class="form-group col-lg-4">
@@ -147,7 +144,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; MadrasWeb 2014</p>
                 </div>
             </div>
         </div>
