added content to first blog post and pics

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -82,13 +82,16 @@
                     </h2>
                     <hr>
                 </div>
-                <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src="{{ url_for('static', filename='img/slide-1.jpg') }}" alt="">
+                <div class="col-lg-12 text-left">
+                    <img class="img-responsive img-border img-full" src="{{ url_for('static', filename='img/Masulipatam_mg_8557.jpg') }}" alt="">
                     <h2>The early years, ante 1640AD
                         <br>
-                        <small>October 13, 2013</small>
+                        <small>Sep 15, 2015</small>
                     </h2>
-                    <p>All the way leading the establishment of the English at Madraspatanam </p>
+                    <p>One day in 1639 AD, Francis Day, set out to examine areas in the neighborhood of the Portugese settlement in St. Thome. Day was a member of the Council at Masulipatinam (present day Machilipatinam in Andhra Pradesh). </p>
+                    <p>Times for tough for the English. The Dutch were still making life miserable for them and had been forced out of a couple of their settlements, like Pulicat and Masulipatnam. They badly needed a break, a place to shelter from the storm that was all around them and promised to break them into a thousand small pieces. </p>
+                    <p>It was for this place that Mr Day went looking for. He had extraordinary success. The location he found, though having rough seas, was very favorable for becoming a good port of entry for goods. In addition, the locals and the Portugese were surprisingly supportive in setting up a settlement there. The Naick of the district procured for him a grant of land, that extended five miles along the coast and one island and the Portugese offered every assistance needed in forming the new establishment. </p>
+                    <p>This was the set of circumstances that brought into existence the city of Madras, during the reign of King Charles I.</p>
                     <a href="#" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
