Update website title

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 
 <meta charset="UTF-8"/>
 
-<title>Leroy - Onepage Bootstrap HTML Template</title>
+<title>Madras Web</title>
 
 <meta name="description" content="Onepage Multipurpose Bootstrap HTML Template">
 
