--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
 	<!--header-->
 	<header>
 	<div class="banner row" id="banner">		
-        <div class="parallax text-center" style="background-image: url(static/img/chennai-train.jpg);">
+        <div class="parallax text-center" style="background-image: url(static/img/chennai-train.jpg);" title="Photo By: Nareshkumar Ponnuswamy">
 			<div class="parallax-pattern-overlay">
 				<div class="container text-center" style="height:580px;padding-top:170px;">
 					<a href="#"><img id="site-title" class=" wow fadeInDown" wow-data-delay="0.0s" wow-data-duration="0.9s" src="/static/img/kannagi.jpg" alt="logo"/></a>
