Added more suburbs to areas of chennai

--- a/templates/index.html
+++ b/templates/index.html
@@ -75,9 +75,9 @@
 			<h2>About Madras</h2>
 			<img class="dividerline" src="static/img/sep.png" alt="">
 			<h3>
-                <p> There are two different theories for the origin of the name Chennai. The first theory is that it was derived from the name of Damal Chennappa Nayagar, father of Damarla Venkatapathy Nayak, a Nayak ruler who served as a general under Venkata III of the Vijayanagar Empire from whom the British acquired the town in 1639.[23][24] The first official use of the name Chennai is said to be in a sale deed, dated 8 August 1639, to Francis Day of the East India Company.[25] The second theory states that it was named after the Chenna Kesava Perumal Temple; the word Chenni in Tamil means face, with the temple regarded as the face of the city.[26] </p>
-                <p> The name Madras originated even before the British presence was established in India.[27] Madras was allegedly derived from Madraspattinam, a fishing-village north of Fort St George.[28] However, it is uncertain whether the name was in use before the arrival of European influence.[29] The British military mapmakers believed Madras was originally Mundir-raj or Mundiraj.[30] Madras might have also been derived from the word Madhu-ras meaning "honey" in Sanskrit.[31] </p>
-                <p> In 1996, the Government of Tamil Nadu officially changed the name from Madras to Chennai. At that time many Indian cities underwent a change of name.[31][32] However, the name Madras continues in occasional use for the city,[33] as well as for places named after the city such as University of Madras, IIT, Madras and Madras Medical College. </p>
+                <p> There are two different theories for the origin of the name Chennai. The first theory is that it was derived from the name of Damal Chennappa Nayagar, father of Damarla Venkatapathy Nayak, a Nayak ruler who served as a general under Venkata III of the Vijayanagar Empire from whom the British acquired the town in 1639. The first official use of the name Chennai is said to be in a sale deed, dated 8 August 1639, to Francis Day of the East India Company. The second theory states that it was named after the Chenna Kesava Perumal Temple; the word Chenni in Tamil means face, with the temple regarded as the face of the city.</p>
+                <p> The name Madras originated even before the British presence was established in India. Madras was allegedly derived from Madraspattinam, a fishing-village north of Fort St George. However, it is uncertain whether the name was in use before the arrival of European influence. The British military mapmakers believed Madras was originally Mundir-raj or Mundiraj. Madras might have also been derived from the word Madhu-ras meaning "honey" in Sanskrit. </p>
+                <p> In 1996, the Government of Tamil Nadu officially changed the name from Madras to Chennai. At that time many Indian cities underwent a change of name. However, the name Madras continues in occasional use for the city, as well as for places named after the city such as University of Madras, IIT, Madras and Madras Medical College. </p>
             </h3>
 		</div>			
 	</div>
@@ -178,6 +178,72 @@
                 </div>
             </div>
 		</div>
+        <div class="row">
+            <br>
+            <div class="col-md-4">
+                <div class="restmenuwrap">
+                    <h3 class="maincat notopmarg text-center">Suburbs N + W</h3>
+                    <div class="restitem clearfix">
+                        <p>Pazhaverkadu</p>
+                        <p>Ponneri</p>
+                        <p>Athipattu</p>
+                        <p>Sholavaram</p>
+                        <p>Minjur</p>
+                        <p>Red Hills</p>
+                        <p>Ennore</p>
+                        <p>Avadi</p>
+                        <p>Pattabiram</p>
+                        <p>Iyyappanthangal</p>
+                        <p>Kattupakkam</p>
+                        <p>Poonamallee</p>
+                        <p>Thirumazhisai</p>
+                        <p>Thirunindravur</p>
+                        <p>Vellavedu</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="restmenuwrap">
+                    <h3 class="maincat notopmarg text-center">Suburbs S</h3>
+                    <div class="restitem clearfix">
+                        <p>Pallavaram</p>
+                        <p>Pozhichalur</p>
+                        <p>Anakaputhur</p>
+                        <p>Pammal</p>
+                        <p>Kundrathur</p>
+                        <p>Mangadu</p>
+                        <p>Chrompet</p>
+                        <p>Tambaram Sanatorium</p>
+                        <p>Keelkattalai</p>
+                        <p>Chitlapakkam</p>
+                        <p>Tambaram</p>
+                        <p>East Tambaram</p>
+                        <p>Selaiyur</p>
+                        <p>Madambakkam</p>
+                        <p>Medavakkam</p>
+                        <p>Sithalapakkam</p>
+                        <p>Kovilambakkam</p>
+                        <p>Nanmangalam</p>
+                        <p>Perungalathur</p>
+                        <p>Vandalur</p>
+                        <p>Urapakkam</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="restmenuwrap">
+                    <h3 class="maincat notopmarg text-center">Suburbs ECR + OMR</h3>
+                    <div class="restitem clearfix">
+                        <p>Karapakkam</p>
+                        <p>Kanathur</p>
+                        <p>Muttukadu</p>
+                        <p>Kelambakkam</p>
+                        <p>Kovalam</p>
+                        <p>Sirusseri</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 	</div>
 	</section>
 	
