--- a/templates/index.html
+++ b/templates/index.html
@@ -72,12 +72,12 @@
 	<div class="container">
 		<div class="heading text-center">
 			<img class="dividerline" src="static/img/sep.png" alt="">
-			<h2>About Madras</h2>
+			<h2>About Madrasweb.com</h2>
 			<img class="dividerline" src="static/img/sep.png" alt="">
 			<h3>
-                <p> There are two different theories for the origin of the name Chennai. The first theory is that it was derived from the name of Damal Chennappa Nayagar, father of Damarla Venkatapathy Nayak, a Nayak ruler who served as a general under Venkata III of the Vijayanagar Empire from whom the British acquired the town in 1639. The first official use of the name Chennai is said to be in a sale deed, dated 8 August 1639, to Francis Day of the East India Company. The second theory states that it was named after the Chenna Kesava Perumal Temple; the word Chenni in Tamil means face, with the temple regarded as the face of the city.</p>
-                <p> The name Madras originated even before the British presence was established in India. Madras was allegedly derived from Madraspattinam, a fishing-village north of Fort St George. However, it is uncertain whether the name was in use before the arrival of European influence. The British military mapmakers believed Madras was originally Mundir-raj or Mundiraj. Madras might have also been derived from the word Madhu-ras meaning "honey" in Sanskrit. </p>
-                <p> In 1996, the Government of Tamil Nadu officially changed the name from Madras to Chennai. At that time many Indian cities underwent a change of name. However, the name Madras continues in occasional use for the city, as well as for places named after the city such as University of Madras, IIT, Madras and Madras Medical College. </p>
+                <p align="left"> Madrasweb.com is a simple website. It exists to talk about Madras (and Chennai as it is now called).</p>
+                <p align="left"> The name Madras originated even before the British presence was established in India. Madras was allegedly derived from Madraspattinam, a fishing-village north of Fort St George. However, it is uncertain whether the name was in use before the arrival of European influence. The British military mapmakers believed Madras was originally Mundir-raj or Mundiraj. Madras might have also been derived from the word Madhu-ras meaning "honey" in Sanskrit. </p>
+                <p align="left"> In 1996, the Government of Tamil Nadu officially changed the name from Madras to Chennai. At that time many Indian cities underwent a change of name. However, the name Madras continues in occasional use for the city, as well as for places named after the city such as University of Madras, IIT, Madras and Madras Medical College. </p>
             </h3>
 		</div>			
 	</div>
