Added helpline, centered tables

--- a/templates/index.html
+++ b/templates/index.html
@@ -56,6 +56,7 @@
 										<li class="menuItem"><a href="#aboutus">About Us</a></li>
 										<li class="menuItem"><a href="#specialties">Areas of Chennai</a></li>
 										<li class="menuItem"><a href="#gallery">Donate to Flood Victims</a></li>
+                                        <li class="menuItem"><a href="#helpline">Helpline Numbers</a></li>
 									</ul>
 								</div>
 							</div>
@@ -75,7 +76,7 @@
 			<h2>About Madrasweb.com</h2>
 			<img class="dividerline" src="static/img/sep.png" alt="">
 			<h3>
-                <p align="left"> Madrasweb.com is a simple website. It exists to talk about Madras (and Chennai as it is now called).</p>
+                <p align="left"> Madrasweb.com is a simple website. It exists to talk about Madras (and Chennai as it is now called). Now in the aftermath of the flooding, a significant portion of this website is dedicated to the flood response.</p>
                 <p align="left"> The name Madras originated even before the British presence was established in India. Madras was allegedly derived from Madraspattinam, a fishing-village north of Fort St George. However, it is uncertain whether the name was in use before the arrival of European influence. The British military mapmakers believed Madras was originally Mundir-raj or Mundiraj. Madras might have also been derived from the word Madhu-ras meaning "honey" in Sanskrit. </p>
                 <p align="left"> In 1996, the Government of Tamil Nadu officially changed the name from Madras to Chennai. At that time many Indian cities underwent a change of name. However, the name Madras continues in occasional use for the city, as well as for places named after the city such as University of Madras, IIT, Madras and Madras Medical College. </p>
             </h3>
@@ -246,20 +247,20 @@
         </div>
 	</div>
 	</section>
-	
+
 	<!--gallery-->
 	<section class="gallery" id="gallery">
-		<div class="container">
+		<div class="container" align="center">
 			<div class="heading text-center">
 				<img class="dividerline" src="static/img/sep.png" alt="">
 				<h2>Donate to Flood Victims</h2>
-                <small>Madrasweb.com is not associated with any of these orgs and does not endorse them.</small>
+                <small> Madrasweb.com is not associated with any of these orgs and does not endorse or benefit from them.</small>
 				<img class="dividerline" src="static/img/sep.png" alt="">
 			</div>
-            <div class="col-md-8" align="center">
+            <div class="col-md-8 col-md-offset-2" style="align-self: center">
                 <div class="restmenuwrap">
                     <h3 class="maincat notopmarg text-center">Aid Organizations accepting donations</h3>
-                    <table class="table" align="center">
+                    <table class="table">
                         <thead>
                             <tr>
                                <th>Organization Name</th>
@@ -290,7 +291,136 @@
             </div>
         </div>
 	</section>
-	
+
+    <!--helpline-->
+    <section class="helpline" id="helpline">
+        <div class="container">
+            <div class="heading text-center">
+                <img class="dividerline" src="static/img/sep.png" alt="">
+                <h2>Helpline Numbers</h2>
+                <img class="dividerline" src="static/img/sep.png" alt="">
+            </div>
+            <div class="col-md-5 col-md-offset-1" align="center">
+                <div class="restmenuwrap">
+                    <h3 class="maincat notopmarg text-center">Emergency Numbers for all regions</h3>
+                    <table class="table" align="center">
+                        <thead>
+                        <tr>
+                            <th>Department/Purpose</th>
+                            <th>Number</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>Tree Fall, Water Logging</td>
+                            <td>1913</td>
+                        </tr>
+                        <tr>
+                            <td>Sewage Overflow</td>
+                            <td>45674567,2200335</td>
+                        </tr>
+                        <tr>
+                            <td>State Emergency</td>
+                            <td>1070</td>
+                        </tr>
+                        <tr>
+                            <td>District Emergency</td>
+                            <td>1077</td>
+                        </tr>
+                        <tr>
+                            <td>Electricity</td>
+                            <td>1912</td>
+                        </tr>
+                        <tr>
+                            <td>Fire & Rescue</td>
+                            <td>101</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="col-md-5" align="center">
+                <div class="restmenuwrap">
+                    <h3 class="maincat notopmarg text-center">Regional office numbers</h3>
+                    <table class="table" align="center">
+                        <thead>
+                        <tr>
+                            <th>Region</th>
+                            <th>Number</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>Tiruvottiyur</td>
+                            <td>9445190001</td>
+                        </tr>
+                        <tr>
+                            <td>Manali</td>
+                            <td>9445190002</td>
+                        </tr>
+                        <tr>
+                            <td>Madhavaram</td>
+                            <td>9445190003</td>
+                        </tr>
+                        <tr>
+                            <td>Tondiapret</td>
+                            <td>9445190004</td>
+                        </tr>
+                        <tr>
+                            <td>Royapuram</td>
+                            <td>9445190005</td>
+                        </tr>
+                        <tr>
+                            <td>Thiru. Vi. Ka. Nagar</td>
+                            <td>9445190006</td>
+                        </tr>
+                        <tr>
+                            <td>Ambattur</td>
+                            <td>9445190007</td>
+                        </tr>
+                        <tr>
+                            <td>Annanagar</td>
+                            <td>9445190008</td>
+                        </tr>
+                        <tr>
+                            <td>Teynampet</td>
+                            <td>9445190009</td>
+                        </tr>
+                        <tr>
+                            <td>Kodambakkam</td>
+                            <td>9445190010</td>
+                        </tr>
+                        <tr>
+                            <td>Valasaravakkam</td>
+                            <td>9445190011</td>
+                        </tr>
+                        <tr>
+                            <td>Alandur</td>
+                            <td>9445190012</td>
+                        </tr>
+                        <tr>
+                            <td>Adyar</td>
+                            <td>9445190013</td>
+                        </tr>
+                        <tr>
+                            <td>Perungudi</td>
+                            <td>9445190014</td>
+                        </tr>
+                        <tr>
+                            <td>Sholinganallur</td>
+                            <td>9445190015</td>
+                        </tr>
+
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <small>Source: Indian Express</small>
+        </div>
+    </section>
+
 	<!--footer-->
 	<section class="footer" id="footer">
 	<p class="text-center">
